<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dyna_controller_messages</name>
  <version>0.0.0</version>
  <description>Package only containing custom messages for ros2</description>
  <maintainer email="example@dc.tohoku.ac.jp">Elian_NEPPEL</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  

  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

<depend>action_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
